// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComputedNutrients /> should render 1`] = `
<div
  className="journal-footer-row"
>
  <span
    className="values-label"
  />
  <div
    className="journal-nutrients-values"
  >
    <TrackedNutrients />
  </div>
</div>
`;

exports[`<ComputedNutrients /> should use contain the passed label 1`] = `
<div
  className="journal-footer-row"
>
  <span
    className="values-label"
  >
    testLabel
  </span>
  <div
    className="journal-nutrients-values"
  >
    <TrackedNutrients />
  </div>
</div>
`;
